Bug fix
Fixed a bug where the recipe content step number is not shown correctly.
Fixed a css error that cause the cooking interface to misalign.

--- a/css/temp.css
+++ b/css/temp.css
@@ -314,7 +314,6 @@ margin-left:5%;width:50%;display:inline-block;
 width:15%;display:inline-block;border-radius:5px;
 }
 .bottom_btn_holder{
-  text-align:center;
   font-size: 20px;
 }
 .h5{
